--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Data Structures in Java/bin/TestArrayQueue.class
 Data Structures in Java/bin/TestArrayStack.class
 Data Structures in Java/bin/TestLLStack.class
 Data Structures in Java/bin/TestIntLLQueue.class
+Data Structures in Java/bin/IntBST.class
+Data Structures in Java/bin/IntBSTNode.class
+Data Structures in Java/bin/TestIntBST.class
