--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Data Structures in Java/bin/TestIntLLQueue.class
 Data Structures in Java/bin/IntBST.class
 Data Structures in Java/bin/IntBSTNode.class
 Data Structures in Java/bin/TestIntBST.class
+Sports Statistics Application/images/.DS_Store
